--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,20 @@ allprojects {
     }
 }
 
+ext {
+    ktx = '1.3.1'
+    lottie = '3.4.2'
+    fragment = "1.2.5"
+    kapt_ver = '1.4.0'
+    lifecycle = "2.2.0"
+    arch = "2.1.0"
+    retrofit = '2.9.0'
+    gson = '2.8.6'
+    dagger = "2.28.3"
+    coroutine = "1.3.9"
+    room = "2.2.5"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
